# backend/docs/swagger.json
@@ -62,6 +62,47 @@
                     }
                 }
             }
+        },
+        "/slack/auth": {
+            "get": {
+                "description": "Generate a Slack OAuth URL for the user login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "slack"
+                ],
+                "summary": "Generate Slack OAuth URL",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_kietle_zenreply_pkg_response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.SlackAuthURLResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_kietle_zenreply_pkg_response.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -140,6 +181,19 @@
                 "version": {
                     "type": "string",
                     "example": "1.0.0"
+                }
+            }
+        },
+        "handler.SlackAuthURLResponse": {
+            "type": "object",
+            "properties": {
+                "state": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "https://slack.com/oauth/v2/authorize?client_id=1234567890\u0026scope=chat:write,im:write,channels:read,groups:read,users:read,reactions:read\u0026redirect_uri=https://localhost:8080/api/v1/slack/auth/callback"
                 }
             }
         }
